openshift/mwp-rails.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: mwp-rails
    name: mwp-rails
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: mwp-rails
      deploymentconfig: mwp-rails
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: mwp-rails
          deploymentconfig: mwp-rails
      spec:
        containers:
        - image: docker-registry.default.svc:5000/demo/mwp-rails@sha256:85975b3d1b199a15b3ab0a199fb6c2b8c2a1059a1878b958da2a12f1550268fa
          imagePullPolicy: Always
          name: mwp-rails
          ports:
          - containerPort: 3000
            protocol: TCP
          - containerPort: 1234
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        serviceAccount: useroot
        serviceAccountName: useroot
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mwp-rails
        from:
          kind: ImageStreamTag
          name: mwp-rails:latest
          namespace: demo
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    generation: 1
    labels:
      app: mwp-rails
    name: mwp-rails
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations: null
      from:
        kind: DockerImage
        name: docker-registry.default.svc:5000/demo/mwp-rails:latest
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/image.dockerRepositoryCheck: 2018-10-05T14:17:28Z
    creationTimestamp: null
    generation: 2
    labels:
      app: mwp-rails
    name: ruby
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: ruby:2.4.3
      from:
        kind: DockerImage
        name: docker-registry.default.svc:5000/demo/ruby:2.4.3
      generation: 2
      importPolicy: {}
      name: 2.4.3
      referencePolicy:
        type: Source
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: mwp-rails
    name: mwp-rails
  spec:
    ports:
    - name: 1234-tcp
      port: 1234
      protocol: TCP
      targetPort: 1234
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: mwp-rails
      deploymentconfig: mwp-rails
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: null
    labels:
      app: mwp-rails
    name: mwp-rails
  spec:
    host: mwp-rails-demo.54.85.121.206.xip.io
    port:
      targetPort: 3000-tcp
    to:
      kind: Service
      name: mwp-rails
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: 2018-10-05T14:30:08Z
        status: "True"
        type: Admitted
      host: mwp-rails-demo.54.85.121.206.xip.io
      routerName: router
      wildcardPolicy: None
kind: List
metadata: {}
